Cleaning up pom files and adding the java.xml.bind module to surefire tests to fix the ClassNotFoundException in the metadata-core tests for JAXBException