@@ -350,7 +350,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <argLine>--illegal-access=permit </argLine>
+                        <argLine>--illegal-access=permit --add-modules=java.xml.bind</argLine>
                         <skipTests>${skip.unit.tests}</skipTests>
 <!--                        <groups>unit</groups>-->
 <!--                        <excludedGroups>broken,notReady</excludedGroups>-->
